# framework

./: .clang-format  .editorconfig  .gitattributes  .gitignore  .gitmodules  AGENTS.md  AlienConfig.h.in  AlienHypreConfig.cmake.in  AlienPETScConfig.cmake.in  Arcane.Axl.sln  Arccon.cmake  ArcconConfig.cmake.in  BUILD.md  CHANGELOG.md  CMakeLists.txt  CMakePresets.json  CONTRIBUTING.md  Directory.Build.props  LICENSE  LICENSE.txt  README.md  Readme.md  _clang-format  addLicense.sh  arccore_config.h.in  codecov.yml  copyright  external.cmake  launcher.bat.in  launcher.sh.in  loadArccon.cmake  nuget.config  version
_common/build_all/: CMakeLists.txt  nuget.config.in
_common/build_all/cmake/: FindArcDependencies.cmake  FindArcane.cmake  FindArccon.cmake  FindArccore.cmake  FindAxlstar.cmake  FindNeo.cmake
alien/: CMakeLists.txt  README.md
alien/.github/workflows/: coverity.yml  ifpen_el7_gimkl-2018b.yml
alien/ArcaneInterface/: .gitmodules  CMakeLists.txt  README.md  format.sh
alien/ArcaneInterface/cmake/: AlienLegacyConfig.h.in  (+4 more)
alien/CMake/: FindSphinx.cmake
alien/standalone/: .editorconfig  CHANGELOG.md  CMakeLists.txt  CMakePresets.json  _clang-format
arcane/ceapart/: Arcane.cmake  ArcaneCea.config.in  CMakeLists.txt
arcane/python/: CMakeLists.txt  python_wrapper.sh.in
arcane/samples_build/: ArcaneCompilerConfig.cmake.in  CMakeLists.txt  nuget.config.in
arcane/tools/: .gitignore  AllTools.sln  ArcaneDotNet.cmake.in  CMakeLists.txt  CommonDll.props  CommonExe.props  CommonInternalDll.props  Directory.Build.props  Directory.Build.targets  arcane_tool_generic_shell.bat.in  arcane_tool_generic_shell.in
arccore/: CMakeLists.txt  COPYRIGHT  README.md  _clang-format  arccore_config.h.in
arccore/CMake/: ArccoreConfig.cmake.in  Functions.cmake
arccore/cmake/: ArccoreConfig.cmake.in  CheckArccoreTypeSize.cmake  CheckCompileFlags.cmake  Functions.cmake
arctools/adoc/: CMakeLists.txt  README.md  generate_axl_infos.sh.in
arctools/common_doc/: CMakeLists.txt  generate_axl_infos.sh.in  test
axlstar/: Arcane.Axl.sln  AxlstarUtilities.cmake  CMakeLists.txt  CommonExe.props  Directory.Build.props  README.md  axldoc_documentation.markdown  launcher.bat.in  launcher.sh.in  omnisharp.json
axlstar/Arcane.Axl/: axl.xsd
axlstar/Arcane.Axl.T4/: Arcane.Axl.T4.csproj  Axlstar.Axl.csproj  Program.cs  axl2ccT4.csproj
axlstar/Axlstar.Axl2cc/: Program.cs
axlstar/Axlstar.Axl2cc.Tests/: UnitTest1.cs
axlstar/Axlstar.AxlCopy/: MainAXLCOPY.cs  MainAXLInstall.cs
axlstar/Axlstar.Driver/: Axlstar.Driver.csproj  Driver.cs
axlstar/CMake/: AxlstarConfig.cmake.in  AxlstarUtilities.cmake  FindDotNetCore.cmake
axlstar/TextTransform/: README.md  TextTransform.cs  TextTransform.csproj  TextTransform.sln
docs/: CMakeLists.txt
docs/sphinx/: API.rst  coding-style.rst  doxygen.rst  index.rst  tutorial.rst
docs/tutorial/: CMakeLists.txt  dist_linear_system.cpp  dist_matrix.cpp  dist_space.cpp  dist_vector.cpp
examples/: CMakeLists.txt  test_krylov.cpp  test_sycl.cpp
modules/AlienOpensourcePlugins/: CMakeLists.txt
modules/refsemantic/: CMakeLists.txt
plugins/hypre/: CMakeLists.txt
plugins/petsc/: AlienPETScConfig.cmake.in  CMakeLists.txt
plugins/trilinos/: CMakeLists.txt
src/: .clang-format  AlienConfig.cmake.in  AlienConfig.h.in  CMakeLists.txt  Doxyfile  NeoTestMain.cpp  hypre_backend.h  hypre_linear_algebra.cpp  hypre_linear_algebra.h  hypre_linear_solver.cpp  hypre_linear_solver.h  hypre_matrix.cpp  hypre_matrix.h  hypre_options.h  hypre_vector.cpp  hypre_vector.h  matrix.cpp  matrix.h  petsc_linear_algebra.cpp  petsc_linear_solver.cpp  vector.cpp  vector.h
src/cmake/: FindSphinx.cmake
src/converters/: hypre_to_simplecsr_vector.cpp  petsc_to_simplecsr_vector.cpp  simplecsr_to_hypre_matrix.cpp  simplecsr_to_hypre_vector.cpp  simplecsr_to_petsc_matrix.cpp  simplecsr_to_petsc_vector.cpp
src/core/: CMakeLists.txt
src/docs/: CMakeLists.txt
src/internal/: hypre_internal.cpp  hypre_internal.h  hypre_internal_linear_algebra.cpp  hypre_internal_linear_algebra.h  hypre_internal_linear_solver.cpp  hypre_internal_linear_solver.h
src/movesemantic/: CMakeLists.txt
src/neo/: CMakeLists.txt  DirectedGraph.h  Family.h  GraphBase.h  Items.h  Mesh.cpp  Mesh.h  MeshKernel.h  Neo.h  Properties.h  Utils.h  neo.h
src/refsemantic/: CMakeLists.txt
src/test/: CMakeLists.txt  GraphTest.cpp  MeshView.cpp  MeshViewPocTest.cpp  NeoBaseTest.cpp  NeoEvolutiveMeshTest.cpp  NeoGraphTest.cpp  NeoMeshAPITest.cpp  NeoPerformanceTest.cpp  NeoPolyhedralMeshTest.cpp
src/test_framework/: CMakeLists.txt  CreateLinearSystemFiles.h
src/tutorial/: dist_matrix.cpp  dist_vector.cpp
test/: CMakeLists.txt  test_hypre.cpp  test_petsc.cpp
test/AlienBench/: AlienBench-2P.arc  AlienBench-4P.arc  AlienBench-aliensolver.arc  AlienBench-hpddm-2P.arc  AlienBench-hts.arc.in  AlienBench-htsamg.arc.in  AlienBench-htscheb-2P.arc  AlienBench-htscheb.arc  AlienBench-htsddml.arc  AlienBench-htsiluth.arc.in  AlienBench-hypre.arc.in  AlienBench-hypreamg.arc.in  AlienBench-ifps.arc.in  AlienBench-ifpsamg.arc.in  AlienBench-internalcheb-csr.arc.in  AlienBench-internalcheb-sycl.arc.in  AlienBench-internalfilu-sycl.arc.in  AlienBench-petsc.arc.in  AlienBench-petscamg.arc.in  AlienBench-slu.arc  AlienBench-slu.arc.in  AlienBench-trilinos.arc.in  AlienBench-trilinosbssor.arc  AlienBench-trilinoscheb-omp.arc.in  AlienBench-trilinosfilu-cuda.arc.in  AlienBench-trilinosmuelu.arc  AlienBench-trilinosmuelu.arc.in  AlienBench-trilinospoly.arc  AlienBench.axl  AlienBench.config  AlienBenchModule.cc  AlienBenchModule.h  AlienStokesModule.cc  AlienStokesModule.h  ArcaneCodeService.cc  CMakeLists.txt  alienth.pl  amgx-hmis.json  main.cc
test/AlienInterfaceC/: CMakeLists.txt
test/AlienTest/: AlienTest.axl  AlienTestModule.cc  AlienTestModule.h  ArcaneCodeService.cc  CMakeLists.txt  MemoryAllocationTracker.h  main.cc
test/ArcaneLaplacian/: ArcaneCodeService.cc  CMakeLists.txt  main.cc
test/Tests/: CMakeLists.txt  Environment.h  Options.h  Solver.h  TestMatrixIO.cc
test/tests/: CMakeLists.txt  TestMatrixIO.cc
(+10071 files in other folders)
